slicePost overflow text when resizing issue solved

--- a/style.css
+++ b/style.css
@@ -58,9 +58,7 @@ input[type="text"] {
 .slice {
   height: 50px;
 }
-.slicePost {
-  height: 350px;
-}
+
 
 @media (max-width: 604px) {
   #brand {
